#add_executable(test test.cpp)

add_executable(algo_base_test algo_base_test.cpp)

#add_executable(allocator_test allocator_test.cpp)

add_executable(algorithm_test algorithm_test.cpp)

add_executable(array_test array_test.cpp)

add_executable(construct_test construct_test.cpp)

add_executable(deque_test deque_test.cpp)

add_executable(forward_list_test forward_list_test.cpp)

add_executable(functional_test functional_test.cpp)

add_executable(hash_table_test hash_table_test.cpp)

add_executable(heap_test heap_test.cpp)

add_executable(iterator_test iterator_test.cpp)

add_executable(list_test list_test.cpp)

add_executable(map_test map_test.cpp)

add_executable(multimap_test multimap_test.cpp)

add_executable(set_test multiset_test.cpp)

add_executable(pair_test pair_test.cpp)

add_executable(priority_queue_test priority_queue_test.cpp)

add_executable(queue_test queue_test.cpp)

add_executable(rb_tree_test rb_tree_test.cpp)

add_executable(stack_test stack_test.cpp)

add_executable(string_test string_test.cpp)

add_executable(type_traits_test type_traits_test.cpp)

add_executable(uninitialized_test uninitialized_test.cpp)

add_executable(unordered_set_test unordered_set_test.cpp)

add_executable(unordered_multiset unordered_multiset.cpp)

add_executable(unordered_map_test unordered_map_test.cpp)

add_executable(unordered_multimap_test unordered_multimap_test.cpp)

add_executable(vector_test vector_test.cpp)